# todos

./: .gitignore  pyproject.toml
backend/: pom.xml
backend/src/main/java/com/todo/backend/controller/: BackendController.java  TasksController.java  UsersController.java
backend/src/main/java/com/todo/backend/models/: Tasks.java  Users.java
backend/src/main/java/com/todo/backend/repositories/: TasksRepo.java  UsersRepo.java
backend/src/main/java/com/todo/backend/service/tasks/: TasksService.java  TasksServiceImpl.java
backend/src/main/java/com/todo/backend/service/users/: UsersService.java  UsersServiceImpl.java
backend/src/main/resources/: application.yml
cli/: pyproject.toml  requirements.txt
cli/todo/: cli.py  task.py
cli/users/: session.json  users.json
cli/users/data/: admin.json  test.json
todo/: __init__.py  cli.py
todo/data/: __init__.py
users/: session.json  users.json
