[project]
name = "todo-cli"
version = "0.0.3"
description = "A simple TODO CLI"
requires-python = ">=3.8"
dependencies = [
    "click",
    "rich"
]

[project.scripts]
todo = "todo.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["todo"] 